--- a/index.html
+++ b/index.html
@@ -7,15 +7,9 @@
     <title>Namaste React</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script
-      crossorigin
-      src="https://unpkg.com/react@18/umd/react.development.js"
-    ></script>
-    <script
-      crossorigin
-      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
-    <script src="./App.js"></script>
+    <div id="root">
+      <h1>Pintu is here!</h1>
+    </div>
+    <script type="module" src="./App.js"></script>
   </body>
 </html>
